继续这惨无人道的更新

--- a/Clean-Reader/Controls/Components/AppSearchBox.xaml
+++ b/Clean-Reader/Controls/Components/AppSearchBox.xaml
@@ -40,7 +40,7 @@
                                  x:Key="SearchSelector"/>
     </UserControl.Resources>
     <Grid>
-        <AutoSuggestBox Style="{StaticResource BasicSearchBoxStyle}" Width="300"
+        <AutoSuggestBox Style="{StaticResource BasicSearchBoxStyle}" Width="{x:Bind Width,Mode=OneWay}"
                         x:Uid="Control_AppSearchBox" TextChanged="AutoSuggestBox_TextChanged"
                         ItemsSource="{x:Bind ResultCollection}" QuerySubmitted="AutoSuggestBox_QuerySubmitted"
                         ItemTemplateSelector="{StaticResource SearchSelector}"/>
