--- a/Clean-Reader/MainPage.xaml
+++ b/Clean-Reader/MainPage.xaml
@@ -5,7 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Clean_Reader"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:layout="using:Clean_Reader.Controls.Layout" xmlns:components="using:Clean_Reader.Controls.Components"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:layout="using:Clean_Reader.Controls.Layout" xmlns:components="using:Clean_Reader.Controls.Components" xmlns:interaction="using:Richasy.Controls.UWP.Interaction" xmlns:uwp="using:Richasy.Font.UWP"
     mc:Ignorable="d"
     Loaded="RichasyPage_Loaded"
     SizeChanged="RichasyPage_SizeChanged"
@@ -13,7 +13,7 @@
 
     <Grid>
         <SplitView OpenPaneLength="300" DisplayMode="CompactInline"
-                   IsPaneOpen="True">
+                   IsPaneOpen="True" x:Name="AppSplitView" CompactPaneLength="0">
             <SplitView.Pane>
                 <Grid>
                     <layout:SidePanel/>
@@ -21,23 +21,47 @@
             </SplitView.Pane>
 
             <SplitView.Content>
-                <Grid Background="{ThemeResource PageBackground}"
-                      Padding="45,20,45,0">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
-                        <TextBlock Style="{StaticResource LargeTextStyle}" VerticalAlignment="Top" HorizontalAlignment="Left"
+                <SplitView x:Name="SecondarySplitView" DisplayMode="CompactOverlay"
+                               OpenPaneLength="400" PaneBackground="{ThemeResource PaneBackground}"
+                               PanePlacement="Right" CompactPaneLength="0" Grid.Row="1">
+                    <SplitView.Pane>
+                        <Grid Padding="30,25,30,0">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <TextBlock Style="{StaticResource TitleTextStyle}" HorizontalAlignment="Left"
+                                           x:Name="SubtitleBlock" LineHeight="0"/>
+                            <Frame x:Name="SubFrame" x:FieldModifier="public" Grid.Row="1"/>
+                        </Grid>
+                    </SplitView.Pane>
+                    <Grid Background="{ThemeResource PageBackground}"
+                      Padding="45,20,45,0" x:Name="Container">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Style="{StaticResource LargeTextStyle}" VerticalAlignment="Top" HorizontalAlignment="Left"
                                    x:Name="TitleBlock" x:FieldModifier="public" LineHeight="0"/>
-                        <components:AppSearchBox Grid.Column="1" VerticalAlignment="Top"/>
+                            <components:AppSearchBox Grid.Column="1" VerticalAlignment="Top" Width="300" x:Name="AppSearchBox"/>
+                        </Grid>
+                        <Frame x:Name="MainFrame" Grid.Row="1" Margin="0,35,0,0"/>
+                        <interaction:ActionButton Style="{StaticResource PrimaryActionButtonStyle}"
+                                              x:Name="SideMenuButton" Visibility="Collapsed"
+                                              HorizontalAlignment="Left" VerticalAlignment="Bottom"
+                                              Margin="0,0,0,20" Grid.RowSpan="2" Click="SideMenuButton_Click">
+                            <interaction:ActionButton.Icon>
+                                <uwp:FeatherIcon Symbol="Menu" Foreground="White" FontSize="{CustomResource BasicFontSize}"/>
+                            </interaction:ActionButton.Icon>
+                        </interaction:ActionButton>
                     </Grid>
-                    <Frame x:Name="MainFrame" Grid.Row="1" Margin="0,35,0,0"/>
-                </Grid>
+                </SplitView>
+                
             </SplitView.Content>
         </SplitView>
     </Grid>
