--- a/Clean-Reader/Pages/CategoryPage.xaml
+++ b/Clean-Reader/Pages/CategoryPage.xaml
@@ -5,10 +5,60 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Clean_Reader.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:share="using:Yuenov.SDK.Models.Share" xmlns:components="using:Clean_Reader.Controls.Components" xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     mc:Ignorable="d">
-
-    <Grid>
-
-    </Grid>
+    <ui:RichasyPage.Resources>
+        <DataTemplate x:DataType="share:Category" x:Key="CategoryItemTemplate">
+            <components:BookCategoryCard Height="90" Margin="0,0,10,10" Title="{x:Bind CategoryName}"
+                                         Images="{x:Bind CoverImgs}"/>
+        </DataTemplate>
+        <DataTemplate x:DataType="share:Rank" x:Key="RankItemTemplate">
+            <components:BookCategoryCard Height="90" Margin="0,0,10,10" Title="{x:Bind RankName}"
+                                         Images="{x:Bind CoverImgs}"/>
+        </DataTemplate>
+    </ui:RichasyPage.Resources>
+    <ScrollViewer Style="{StaticResource BasicScrollViewer}"
+                  VerticalScrollBarVisibility="Hidden"
+                  HorizontalScrollMode="Disabled">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid x:Name="CategoryContainer" Margin="0,0,0,25">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <TextBlock Style="{StaticResource SubtitleTextStyle}" VerticalAlignment="Center" x:Uid="Control_CategoryTipBlock"
+                           HorizontalAlignment="Left" Margin="0,0,0,20"/>
+                <controls:AdaptiveGridView x:Name="CategoryGridView" ItemContainerStyle="{StaticResource TransparentGridViewItemContainerStyle}"
+                          Style="{StaticResource NoScrollGridView}" IsItemClickEnabled="True" Grid.Row="1" ItemsSource="{x:Bind vm.CategoryCollection}"
+                          ItemClick="CategoryGridView_ItemClick" ItemTemplate="{StaticResource CategoryItemTemplate}" StretchContentForSingleRow="True"
+                          DesiredWidth="150"/>
+                <components:IconTextBlock x:Name="CategoryNoDataBlock" x:Uid="Control_ConnectFailedBlock"
+                                  VerticalAlignment="Center" Symbol="WifiOff" Grid.Row="1"
+                                  HorizontalAlignment="Center" Visibility="Collapsed"/>
+                <ProgressBar HorizontalAlignment="Stretch" Foreground="{ThemeResource PrimaryColor}" IsIndeterminate="True"
+                             x:Name="CategoryLoadingBar" Margin="0,10,0,0" Visibility="Collapsed" Grid.Row="1"/>
+            </Grid>
+            <Grid x:Name="RankContainer" Margin="0,0,0,25" Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <TextBlock Style="{StaticResource SubtitleTextStyle}" VerticalAlignment="Center" x:Uid="Control_RankTipBlock"
+                           HorizontalAlignment="Left" Margin="0,0,0,20"/>
+                <controls:AdaptiveGridView x:Name="RankGridView" ItemContainerStyle="{StaticResource TransparentGridViewItemContainerStyle}"
+                          Style="{StaticResource NoScrollGridView}" IsItemClickEnabled="True" Grid.Row="1" ItemsSource="{x:Bind vm.RankCollection}"
+                          ItemClick="RankGridView_ItemClick"  ItemTemplate="{StaticResource RankItemTemplate}" StretchContentForSingleRow="True"
+                          DesiredWidth="150"/>
+                <components:IconTextBlock x:Name="RankNoDataBlock" x:Uid="Control_ConnectFailedBlock"
+                                  VerticalAlignment="Center" Symbol="WifiOff" Grid.Row="1"
+                                  HorizontalAlignment="Center" Visibility="Collapsed"/>
+                <ProgressBar HorizontalAlignment="Stretch" Foreground="{ThemeResource PrimaryColor}" IsIndeterminate="True"
+                             x:Name="RankLoadingBar" Margin="0,10,0,0" Visibility="Collapsed" Grid.Row="1"/>
+            </Grid>
+        </Grid>
+    </ScrollViewer>
 </ui:RichasyPage>
