--- a/Clean-Reader/Template/Buttons.xaml
+++ b/Clean-Reader/Template/Buttons.xaml
@@ -14,6 +14,20 @@
         <Setter Property="CornerRadius" Value="4" />
         <Setter Property="Padding" Value="12,8" />
     </Style>
+    <Style TargetType="interaction:ExtraButton" x:Key="TransparentExtraButtonStyle">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Foreground" Value="Transparent" />
+        <Setter Property="BorderBrush" Value="Transparent" />
+        <Setter Property="PointerOverBackground" Value="Transparent" />
+        <Setter Property="PointerOverForeground" Value="Transparent" />
+        <Setter Property="PressBackground" Value="Transparent" />
+        <Setter Property="PressForeground" Value="Transparent" />
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="CornerRadius" Value="0" />
+        <Setter Property="Padding" Value="0" />
+        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+        <Setter Property="VerticalContentAlignment" Value="Stretch" />
+    </Style>
     <Style TargetType="interaction:ExtraButton" x:Key="DefaultExtraButtonStyle">
         <Setter Property="Background" Value="{ThemeResource CardBackground}" />
         <Setter Property="Foreground" Value="{ThemeResource NormalTextColor}" />
