--- a/Clean-Reader/Controls/Components/ColorConfigPanel.xaml
+++ b/Clean-Reader/Controls/Components/ColorConfigPanel.xaml
@@ -4,13 +4,14 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Clean_Reader.Controls.Components"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:interaction="using:Richasy.Controls.UWP.Interaction" xmlns:uwp="using:Richasy.Font.UWP" xmlns:ui="using:Clean_Reader.Models.UI"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:interaction="using:Richasy.Controls.UWP.Interaction" xmlns:uwp="using:Richasy.Font.UWP" xmlns:ui="using:Clean_Reader.Models.UI" xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
     <UserControl.Resources>
         <DataTemplate x:Key="ColorItemTemplate" x:DataType="ui:ReaderColorConfig">
-            <local:ColorDisplayBlock DataContext="{Binding}" Margin="0,10,10,0" Apply="ColorDisplay_Apply" Delete="ColorDisplay_Delete"/>
+            <local:ColorDisplayBlock DataContext="{Binding}" Margin="0,10,10,0" Apply="ColorDisplay_Apply" Delete="ColorDisplay_Delete"
+                                     />
         </DataTemplate>
     </UserControl.Resources>
     <Grid>
@@ -29,12 +30,12 @@
                             <uwp:FeatherIcon Symbol="Plus" FontSize="{CustomResource BasicFontSize}"/>
                         </interaction:IconButton.Icon>
                     </interaction:IconButton>
-                    <GridView x:Name="ColorConfigGridView"
+                    <controls:AdaptiveGridView x:Name="ColorConfigGridView"
                                       Grid.Row="1"
                                   ItemsSource="{x:Bind vm.ColorConfigCollection}"
                                   ItemContainerStyle="{StaticResource TransparentGridViewItemContainerStyle}"
                                   Style="{StaticResource BasicGridView}"
-                                  IsItemClickEnabled="True"
+                                  IsItemClickEnabled="True" DesiredWidth="100" ItemHeight="80"
                                   ItemTemplate="{StaticResource ColorItemTemplate}"
                                   />
                 </Grid>
