--- a/Clean-Reader/Theme/Light.xaml
+++ b/Clean-Reader/Theme/Light.xaml
@@ -25,7 +25,8 @@
     <SolidColorBrush x:Key="LineColor" Color="#E1E1E1"/>
     <SolidColorBrush x:Key="LineColorOver" Color="#D9D9D9"/>
 
-    <SolidColorBrush x:Key="ProgressColor" Color="#E1E1E1" Opacity="0.4"/>
+    <SolidColorBrush x:Key="ProgressColor" Color="#3d3d3d" Opacity="0.4"/>
+    <SolidColorBrush x:Key="ProgressColorOver" Color="#3d3d3d" Opacity="0.6"/>
 
     <SolidColorBrush x:Key="PrimaryColorOpacity" Color="#B3B3F6" Opacity="0.1"/>
     <SolidColorBrush x:Key="PrimaryColor" Color="#322A6F"/>
